<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_regisForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/icon_LARGE_X_48dp"
            android:layout_height="@dimen/icon_LARGE_X_48dp"
            android:background="@color/button_skip_bg"
            android:contentDescription="@string/COMMON_ContentDesctiption"
            android:padding="@dimen/padding_LARGE_16dp"
            android:src="@drawable/ic_avatar" />

        <EditText
            android:id="@+id/editText_registration_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_avatar"
            android:layout_alignTop="@+id/iv_avatar"
            android:layout_toRightOf="@+id/iv_avatar"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/hint_number"
            android:inputType="phone"
            android:paddingLeft="@dimen/margin_MEDIUM_10dp"
            android:paddingRight="@dimen/margin_MEDIUM_10dp"
            android:textColor="@color/WHITE"
            android:textColorHint="@color/button_skip_bg"
            android:textCursorDrawable="@null" >

            <requestFocus
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </EditText>
    </RelativeLayout>

    <TextView
        android:id="@+id/button_registration_Continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_LARGE_X_48dp"
        android:layout_marginTop="@dimen/margin_MEDIUM_10dp"
        android:background="@drawable/button_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/registration_continue"
        android:textAllCaps="true"
        android:textColor="@color/WHITE"
        android:textSize="18sp" />

</LinearLayout>