<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BROWN_BACKGROUND"
    tools:context=".UserFilterActivity" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/UserFilter_TextView_multiChoiceMessage" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/UserFilter_TableLayout_AnswerContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin_16dp" >
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/UserFilter_TextView_multiChoiceMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_continue"
        android:layout_marginBottom="@dimen/margin_MEDIUM_10dp"
        android:gravity="center"
        android:padding="@dimen/padding_LARGE_16dp"
        android:text="@string/VN_UserFilter_multiChoiceText"
        android:textColor="@color/WHITE"
        android:textSize="@dimen/textSize_MEDIUM_15sp" />

    <RelativeLayout
        android:id="@+id/layout_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clickable="true" >

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_skip"
            android:layout_alignTop="@+id/iv_skip"
            android:layout_toLeftOf="@+id/iv_skip"
            android:background="@color/text_skip_bg"
            android:gravity="center"
            android:text="@string/VN_UserFilter_Continue"
            android:textAllCaps="true"
            android:textColor="@color/WHITE"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_skip"
            android:layout_width="@dimen/icon_LARGE_X_48dp"
            android:layout_height="@dimen/icon_LARGE_X_48dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/button_skip_bg"
            android:contentDescription="@string/COMMON_ContentDesctiption"
            android:padding="@dimen/padding_LARGE_16dp"
            android:src="@drawable/ic_skip" />
    </RelativeLayout>

</RelativeLayout>