<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".Activation" >

<LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_activation_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/activation_horizontal_margin_left_20dp"
                android:background="@color/green" />

            <EditText
                android:id="@+id/activeCode"
                android:layout_width="fill_parent"
                android:layout_height="49dp"
                android:layout_marginRight="@dimen/activation_horizontal_margin_right_20dp"
                android:background="@drawable/active_edit_text"
                android:ems="10"
                android:height="10dp"
                android:hint="@string/active_code"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:textColor="@color/green"
                android:textColorHint="@color/green" >

                <requestFocus
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/btnActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activation_horizontal_margin_left_20dp"
            android:layout_marginRight="@dimen/activation_horizontal_margin_right_20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_active"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/btn_active"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btnBottomTextView"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/btn_kept"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLater"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_kept"
            android:gravity="center"
            android:minWidth="60dp" />
    </LinearLayout>

</RelativeLayout>